# 2024-os-hw1

./:  temp  .gitignore  CMakeLists.txt  HOW_TO_USE_MAKEFILE.md  Makefile  README.md  SiSH  SiSH.c  SiSH_test.c  a.out  devproc.c  explore.c  fedit.c  fork  fork.c  fork2  fork2.c  getenv  getenv.c  hello.c  hw1  hw1.c  main.c  makefile  my_program  myshell.c  newshell.c  shell.c  shell.h  sish.c  sish_pre.c  stat  stat.c  운영체제_과제1_Simple_MyShell.hwpx
HW#01-SimpleShell/src/: Makefile  MyShell.h  config.cpp  main.cpp  parser.cpp  shellFunc.cpp
HW1/: My Simple Shell.docx  x.c
HW1/SISH/: makefile
HW1/src/: main.c  makefile
HW1_project/: Makefile  functions.c  functions.h  main.c
docs/: os-report1.docx  ~$-report1.docx
example/: pid.c
hw1/: Source.c
include/: custom_commands.h  parser.h  process.h  sighandlers.h  sish.h
myshell/: Makefile  a.out  cd_func.c  echo_getenv.c  gcc_func.c  hello.c  myshell  newshell.c  non_pipe_fork.c  other_func.h  pipe_fork.c  test  test.c
report/: HW1_손보경(32212190).hwpx
sampleCode/: a.out
src/: Makefile  SiSH.c  argument_parser.c  argument_parser.h  command.c  custom_commands.c  execute_command.c  getenv.c  input.c  instruction_parser.c  instruction_parser.h  main.c  parser.c  path.c  process.c  shell.c  shell.h  sighandlers.c  sish_internal  strcnt.c  strcnt.h  strops.c  strops.h  temp  temp.c  word_arrays.c
src/commands/: getenv.c  quit.c  (+4 more)
src_new/: SiSH.c  SiSH.h  argument_parser.c  argument_parser.h  instruction_parser.c  instruction_parser.h  main.c  shell.c  shell.h
testfile/: sish_pre.c  stat.c
tests/: tests.c
(+18 files in other folders)
